[fix] - ajustando z-index do toggle button

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,7 +25,6 @@ html.dark {
 
 html, body {
   font-family: 'Roboto', sans-serif;
-  overflow-x: hidden;
   background-color: var(--color-background);
   overflow-x: hidden;
 }
